clusters/firefly/apps/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:2.0.5.5160
          ports:
            - containerPort: 9696 # Prowlarr web interface
          volumeMounts:
            - mountPath: /config
              name: prowlarr
      volumes:
        - name: prowlarr
          persistentVolumeClaim:
            claimName: prowlarr
